# blast2galaxy

./: .gitignore  .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  noxfile.py  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: tests.yml
api/: index.html
cli/: index.html
configuration/: index.html
docs/: api.md  cli.md  configuration.md  index.md  installation.md  tutorial.md  usage.md  usage_api.md  usage_cli.md
docs/assets/: Thumbs.db
installation/: index.html
src/blast2galaxy/: __init__.py  cli.py  config.py  errors.py  utils.py
src/blast2galaxy/api/: __init__.py  blast_request.py  choices.py  help_texts.py  server_info.py
test_data/: .blast2galaxy.toml  barley_vrs1_cds.fasta  barley_vrs1_prot.fasta  human_h4c1_cds.fasta  human_h4c1_prot.fasta
tests/: test_api.py  test_cli.py
usage/: index.html
