[tool.poetry]
name = "blast2galaxy"
version = "1.0.0"
keywords = ["bioinformatics", "blast", "sequence alignment"]
description = "A Python package providing a CLI and API to perform BLAST+ and DIAMOND queries against public or private Galaxy servers"
authors = ["Patrick König <koenig@ipk-gatersleben.de>"]
readme = "README.md"
license = "MIT"
packages = [{include = "blast2galaxy", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.9.0"
bioblend = "^1.2.0"
rich = "^13.6.0"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
mkdocs-click = "^0.8.1"
mkdocstrings = "^0.25.1"
mkdocstrings-python = "^1.10.5"
mkdocs-material = "^9.5.31"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
nox = "^2024.4.15"
nox-poetry = "^1.0.3"

[tool.poetry.scripts]
blast2galaxy = "blast2galaxy.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "blast2galaxy"
description = "A Python package providing a CLI and API to perform BLAST+ and DIAMOND queries against public or private Galaxy servers"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Patrick König"},
]
maintainers = [
    {name = "Patrick König", email = "koenig@ipk-gatersleben.de"},
]
readme = "README.md"

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
Documentation = "https://blast2galaxy.readthedocs.io/"
Source = "https://github.com/IPK-BIT/blast2galaxy/"
Homepage = "https://github.com/IPK-BIT/blast2galaxy/"